Fixed Client to fresh start as well as server side

--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,17 @@
 {
   "name": "rig-rundown",
   "version": "1.0.0",
-  "description": "api for my musical instruments",
+  "description": "app to track my music gear",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
   "author": "Dale Bendixen",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.8.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
