--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Dale Bendixen",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.1"
