--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rig-rundown",
   "version": "0.1.0",
-  "proxy": "http://127.0.0.1:5000",
+  "proxy": "https://rig-rundown.adaptable.app/",
   "private": true,
   "dependencies": {
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
