--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "build"
+    "build": "npm build"
   },
   "author": "Dale Bendixen",
   "license": "ISC",
