--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,7 @@
   "description": "app to track my music gear",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "build": "npm build"
+    "start": "node server.js"
   },
   "author": "Dale Bendixen",
   "license": "ISC",
